add dependency injection with dagger how module network and sharedPreferences, progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">eats</string>
+    <string name="app_name">Eats</string>
+    <string name="name_progressAV">BallPulseIndicator</string>
 </resources>
