--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">Eats</string>
     <string name="name_progressAV">BallPulseIndicator</string>
+
+    <string name="text_guardar">Guardar</string>
+    <string name="field_required">Campo requerido</string>
+    <string name="email_not_formed">El formato no es valido</string>
+    <string name="field_length_30">Debe ser mayor a 30 caracteres</string>
+    <string name="field_length_6">Debe ser mayor a 6 caracteres</string>
+    <string name="onlyNumber">Solo se aceptan caracteres numericos</string>
+
+    <!-- TODO Navigation Drawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="text_name_user">Alexander Juarez</string>
+    <string name="text_title_item_home">Inicio</string>
+    <string name="text_invitar_amigos">Invitar Amigos</string>
+    <string name="text_preguntas_frecuentes">Preguntas frecuentes</string>
+    <string name="text_context_description">context description</string>
 </resources>
